--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ body {
 /* CONTENIDO */
 #contenedor {
   width: 85%;
-  min-height: 900px;
+  height: auto;
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -108,13 +108,128 @@ body {
 /* BARRA LATERAL */
 #sidebar {
   float: right;
-  width: 25%;
-  min-height: 900px;
+  width: 27%;
+  height: auto;
+}
+
+.bloque {
+  display: block;
+  width: 90%;
+  margin: 0px auto;
+  margin-bottom: 35px;
+  background: white;
+  padding: 15px;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.3),
+    0px 0px 1px #ffffff inset, 0px -3px 2px rgba(0, 0, 0, 0.25) inset;
+}
+
+.bloque h3 {
+  margin-bottom: 15px;
+}
+
+label,
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  display: block;
+  width: 95%;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+input[type="button"],
+input[type="submit"] {
+  color: white;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: block;
+  border-radius: 2px;
+  -webkit-border-radius: ;
+  -moz-border-radius: ;
+  -ms-border-radius: ;
+  -o-border-radius: ;
+  background: #007ee5;
+  border: 1px solid #156785;
+  cursor: pointer;
+  padding: 7px;
 }
 
 /* PRINCIPAL */
 #principal {
   float: left;
-  width: 70%;
-  min-height: 900px;
+  width: 65%;
+  min-height: 570px;
+  background: white;
+  border-radius: 5px;
+  -webkit-border-radius: ;
+  -moz-border-radius: ;
+  -ms-border-radius: ;
+  -o-border-radius: ;
+  box-shadow: 0px 0px 5px #ccc;
+  margin-left: 20px;
+  padding: 20px;
+  overflow: hidden;
+}
+
+#principal h1 {
+  font-size: 32px;
+  color: #444;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 2px #ccc;
+  font-family: "fajala";
+}
+
+#principal h2 {
+  font-size: 20px;
+  color: #2979cd;
+  letter-spacing: 1px;
+  font-family: "fajala";
+  margin-top: 25px;
+}
+
+#principal p {
+  margin-top: 8px;
+}
+
+#ver-todas a {
+  color: white;
+  display: block;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  padding: 15px;
+  background: #007ee5;
+  border: 1px solid #156785;
+  cursor: pointer;
+  width: 75px;
+  margin: 0px auto;
+  margin-top: 50px;
+}
+
+/* PIE DE PAGINA */
+#pie {
+  clear: both;
+  width: 84%;
+  margin: 0 auto;
+  background: linear-gradient(to bottom, #f9f9f9 0px, #e9e9e9 100%);
+  border: 1px solid #c9c9c9;
+  border-bottom: none;
+  color: #666;
+  height: auto;
+  padding: 15px;
+  text-align: center;
+  border-radius: 8px 8px 0px 0px;
+  -webkit-border-radius: 8px 8px 0px 0px;
+  -moz-border-radius: 8px 8px 0px 0px;
+  -ms-border-radius: 8px 8px 0px 0px;
+  -o-border-radius: 8px 8px 0px 0px;
 }
