--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,10 +151,10 @@ input[type="submit"] {
   margin-bottom: 5px;
   display: block;
   border-radius: 2px;
-  -webkit-border-radius: ;
-  -moz-border-radius: ;
-  -ms-border-radius: ;
-  -o-border-radius: ;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
   background: #007ee5;
   border: 1px solid #156785;
   cursor: pointer;
@@ -168,10 +168,10 @@ input[type="submit"] {
   min-height: 570px;
   background: white;
   border-radius: 5px;
-  -webkit-border-radius: ;
-  -moz-border-radius: ;
-  -ms-border-radius: ;
-  -o-border-radius: ;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
   box-shadow: 0px 0px 5px #ccc;
   margin-left: 20px;
   padding: 20px;
@@ -218,7 +218,7 @@ input[type="submit"] {
 /* PIE DE PAGINA */
 #pie {
   clear: both;
-  width: 84%;
+  width: 8%;
   margin: 0 auto;
   background: linear-gradient(to bottom, #f9f9f9 0px, #e9e9e9 100%);
   border: 1px solid #c9c9c9;
